--- a/configs/IterAE/train.yaml
+++ b/configs/IterAE/train.yaml
@@ -1,26 +1,26 @@
 dataset:
   train:
-    # # Peptides
-    # - class: DynamicBatchWrapper
-    #   dataset:
-    #     class: MixDatasetWrapper
-    #     datasets:
-    #       # pepbench
-    #       - class: PeptideDataset
-    #         mmap_dir: ./datasets/peptide/pepbench/processed
-    #         specify_index: ./datasets/peptide/pepbench/processed/train_index.txt
-    #         cluster: ./datasets/peptide/pepbench/train.cluster
-    #       # protein-peptide complex with non standard amino acids
-    #       - class: PeptideDataset
-    #         mmap_dir: ./datasets/peptide/pepbench/processed
-    #         specify_index: ./datasets/peptide/pepbench/processed/non_standard_index.txt
-    #       # protein-fragments
-    #       - class: PeptideDataset
-    #         mmap_dir: ./datasets/peptide/ProtFrag/processed
-    #     # weights: [1.0, 1.0, 1.0]
-    #   complexity: n*n
-    #   ubound_per_batch: 120000
-    #   n_use_max_in_batch: true
+    # Peptides
+    - class: DynamicBatchWrapper
+      dataset:
+        class: MixDatasetWrapper
+        datasets:
+          # pepbench
+          - class: PeptideDataset
+            mmap_dir: ./datasets/peptide/pepbench/processed
+            specify_index: ./datasets/peptide/pepbench/processed/train_index.txt
+            cluster: ./datasets/peptide/pepbench/train.cluster
+          # protein-peptide complex with non standard amino acids
+          - class: PeptideDataset
+            mmap_dir: ./datasets/peptide/pepbench/processed
+            specify_index: ./datasets/peptide/pepbench/processed/non_standard_index.txt
+          # protein-fragments
+          - class: PeptideDataset
+            mmap_dir: ./datasets/peptide/ProtFrag/processed
+        # weights: [1.0, 1.0, 1.0]
+      complexity: n*n
+      ubound_per_batch: 2000000
+      n_use_max_in_batch: true
     # Small Molecules
     - class: DynamicBatchWrapper
       dataset: # crossdocked
@@ -28,45 +28,45 @@ dataset:
         mmap_dir: ./datasets/molecule/CrossDocked/processed
         specify_index: ./datasets/molecule/CrossDocked/processed/train_index.txt
       complexity: n*n
-      ubound_per_batch: 36000
+      ubound_per_batch: 2000000
       n_use_max_in_batch: true
-    # # Antibody
-    # - class: DynamicBatchWrapper
-    #   dataset:
-    #     class: MixDatasetWrapper
-    #     datasets:
-    #       - class: AntibodyDataset
-    #         mmap_dir: ./datasets/antibody/SAbDab/processed
-    #         specify_index: ./datasets/antibody/SAbDab/processed/train_index.txt
-    #     weights: [1.0]
-    #   complexity: n*n
-    #   ubound_per_batch: 120000
-    #   n_use_max_in_batch: true
+    # Antibody
+    - class: DynamicBatchWrapper
+      dataset:
+        class: MixDatasetWrapper
+        datasets:
+          - class: AntibodyDataset
+            mmap_dir: ./datasets/antibody/SAbDab/processed
+            specify_index: ./datasets/antibody/SAbDab/processed/train_index.txt
+        weights: [1.0]
+      complexity: n*n
+      ubound_per_batch: 2000000
+      n_use_max_in_batch: true
   valid:
-    # - class: DynamicBatchWrapper
-    #   dataset: 
-    #     class: PeptideDataset
-    #     mmap_dir: ./datasets/peptide/pepbench/processed
-    #     specify_index: ./datasets/peptide/pepbench/processed/valid_index.txt
-    #   complexity: n*n
-    #   ubound_per_batch: 120000
-    #   n_use_max_in_batch: true
+    - class: DynamicBatchWrapper
+      dataset: 
+        class: PeptideDataset
+        mmap_dir: ./datasets/peptide/pepbench/processed
+        specify_index: ./datasets/peptide/pepbench/processed/valid_index.txt
+      complexity: n*n
+      ubound_per_batch: 2000000
+      n_use_max_in_batch: true
     - class: DynamicBatchWrapper
       dataset: 
         class: MoleculeDataset
         mmap_dir: ./datasets/molecule/CrossDocked/processed
         specify_index: ./datasets/molecule/CrossDocked/processed/valid_index.txt
       complexity: n*n
-      ubound_per_batch: 36000
+      ubound_per_batch: 2000000
       n_use_max_in_batch: true
-    # - class: DynamicBatchWrapper
-    #   dataset: 
-    #     class: AntibodyDataset
-    #     mmap_dir: ./datasets/antibody/SAbDab/processed
-    #     specify_index: ./datasets/antibody/SAbDab/processed/valid_index.txt
-    #   complexity: n*n
-    #   ubound_per_batch: 120000
-    #   n_use_max_in_batch: true
+    - class: DynamicBatchWrapper
+      dataset: 
+        class: AntibodyDataset
+        mmap_dir: ./datasets/antibody/SAbDab/processed
+        specify_index: ./datasets/antibody/SAbDab/processed/valid_index.txt
+      complexity: n*n
+      ubound_per_batch: 2000000
+      n_use_max_in_batch: true
 
 dataloader:
   train:
@@ -79,7 +79,7 @@ trainer:
   class: IterAETrainer
   criterion: loss
   config:
-    max_epoch: 10
+    max_epoch: 50
     save_topk: 10
     val_freq: 10
     save_dir: ./ckpts/unimomo
