--- a/configs/Rect/train.yaml
+++ b/configs/Rect/train.yaml
@@ -1,29 +1,29 @@
 dataset:
   train:
-    # # Peptides
-    # - class: DynamicBatchWrapper
-    #   dataset:
-    #     class: MixDatasetWrapper
-    #     datasets:
-    #       # pepbench
-    #       - class: PeptideDataset
-    #         mmap_dir: ./datasets/peptide/pepbench/processed
-    #         specify_index: ./datasets/peptide/pepbench/processed/train_index.txt
-    #         cluster: ./datasets/peptide/pepbench/train.cluster
-    #         length_type: block
-    #       # protein-peptide complex with non standard amino acids
-    #       - class: PeptideDataset
-    #         mmap_dir: ./datasets/peptide/pepbench/processed
-    #         specify_index: ./datasets/peptide/pepbench/processed/non_standard_index.txt
-    #         length_type: block
-    #       # protein-fragments
-    #       - class: PeptideDataset
-    #         mmap_dir: ./datasets/peptide/ProtFrag/processed
-    #         length_type: block
-    #     # weights: [1.0, 1.0, 1.0]
-    #   complexity: n*n
-    #   ubound_per_batch: 40000  # reduce from 1800000
-    #   n_use_max_in_batch: true
+    # Peptides
+    - class: DynamicBatchWrapper
+      dataset:
+        class: MixDatasetWrapper
+        datasets:
+          # pepbench
+          - class: PeptideDataset
+            mmap_dir: ./datasets/peptide/pepbench/processed
+            specify_index: ./datasets/peptide/pepbench/processed/train_index.txt
+            cluster: ./datasets/peptide/pepbench/train.cluster
+            length_type: block
+          # protein-peptide complex with non standard amino acids
+          - class: PeptideDataset
+            mmap_dir: ./datasets/peptide/pepbench/processed
+            specify_index: ./datasets/peptide/pepbench/processed/non_standard_index.txt
+            length_type: block
+          # protein-fragments
+          - class: PeptideDataset
+            mmap_dir: ./datasets/peptide/ProtFrag/processed
+            length_type: block
+        # weights: [1.0, 1.0, 1.0]
+      complexity: n*n
+      ubound_per_batch: 180000  # reduce from 1800000
+      n_use_max_in_batch: true
     # Small Molecules
     - class: DynamicBatchWrapper
       dataset: # crossdocked
@@ -32,28 +32,28 @@ dataset:
         specify_index: ./datasets/molecule/CrossDocked/processed/train_index.txt
         length_type: block
       complexity: n*n
-      ubound_per_batch: 40000  # reduce from 800000
+      ubound_per_batch: 80000  # reduce from 800000
       n_use_max_in_batch: true
-    # # Antibody
-    # - class: DynamicBatchWrapper
-    #   dataset:
-    #     class: AntibodyDataset
-    #     mmap_dir: ./datasets/antibody/SAbDab/processed
-    #     specify_index: ./datasets/antibody/SAbDab/processed/train_index.txt
-    #     length_type: block
-    #   complexity: n*n
-    #   ubound_per_batch: 30000  # reduce from 900000
-    #   n_use_max_in_batch: true
+    # Antibody
+    - class: DynamicBatchWrapper
+      dataset:
+        class: AntibodyDataset
+        mmap_dir: ./datasets/antibody/SAbDab/processed
+        specify_index: ./datasets/antibody/SAbDab/processed/train_index.txt
+        length_type: block
+      complexity: n*n
+      ubound_per_batch: 90000  # reduce from 900000
+      n_use_max_in_batch: true
   valid:
-    # - class: DynamicBatchWrapper
-    #   dataset: 
-    #     class: PeptideDataset
-    #     mmap_dir: ./datasets/peptide/pepbench/processed
-    #     specify_index: ./datasets/peptide/pepbench/processed/valid_index.txt
-    #     length_type: block
-    #   complexity: n*n
-    #   ubound_per_batch: 40000  # reduce from 1800000
-    #   n_use_max_in_batch: true
+    - class: DynamicBatchWrapper
+      dataset: 
+        class: PeptideDataset
+        mmap_dir: ./datasets/peptide/pepbench/processed
+        specify_index: ./datasets/peptide/pepbench/processed/valid_index.txt
+        length_type: block
+      complexity: n*n
+      ubound_per_batch: 180000  # reduce from 1800000
+      n_use_max_in_batch: true
     - class: DynamicBatchWrapper
       dataset: 
         class: MoleculeDataset
@@ -61,17 +61,17 @@ dataset:
         specify_index: ./datasets/molecule/CrossDocked/processed/valid_index.txt
         length_type: block
       complexity: n*n
-      ubound_per_batch: 30000 # reduced from 600000 # avoid autoencoder OOM in validation
+      ubound_per_batch: 60000 # reduced from 600000 # avoid autoencoder OOM in validation
       n_use_max_in_batch: true
-    # - class: DynamicBatchWrapper
-    #   dataset: 
-    #     class: AntibodyDataset
-    #     mmap_dir: ./datasets/antibody/SAbDab/processed
-    #     specify_index: ./datasets/antibody/SAbDab/processed/valid_index.txt
-    #     length_type: block
-    #   complexity: n*n
-    #   ubound_per_batch: 30000  # reduce from 900000
-    #   n_use_max_in_batch: true
+    - class: DynamicBatchWrapper
+      dataset: 
+        class: AntibodyDataset
+        mmap_dir: ./datasets/antibody/SAbDab/processed
+        specify_index: ./datasets/antibody/SAbDab/processed/valid_index.txt
+        length_type: block
+      complexity: n*n
+      ubound_per_batch: 90000  # reduce from 900000
+      n_use_max_in_batch: true
 
 dataloader:
   train:
@@ -84,7 +84,7 @@ trainer:
   class: RectTrainer  # Changed from LDMTrainer
   criterion: total    # Changed from loss to total
   config:
-    max_epoch: 10
+    max_epoch: 20
     save_topk: 10
     val_freq: 1
     save_dir: ./ckpts/unimomo
